--- a/.prettierrc
+++ b/.prettierrc
@@ -1,4 +1,10 @@
 {
+  "printWidth": 120,
+  "tabWidth": 2,
+  "semi": true,
   "singleQuote": true,
-  "trailingComma": "all"
+  "trailingComma": "all",
+  "jsxSingleQuote": true,
+  "arrowParens": "always",
+  "proseWrap": "never"
 }
