--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,18 @@
     "sourceMap": true,
     "outDir": "./dist",
     "baseUrl": "./",
+    "paths": {
+      "@/*": ["src/*"],
+      "@common/*": ["src/common/*"],
+      "@config/*": ["src/config/*"],
+      "@database/*": ["src/database/*"],
+      "@integrations/*": ["src/integrations/*"],
+      "@metrics/*": ["src/metrics/*"],
+      "@projects/*": ["src/projects/*"],
+      "@proto/*": ["src/proto/*"],
+      "@releases/*": ["src/releases/*"],
+      "@tags/*": ["src/tags/*"]
+    },
     "incremental": true,
     "skipLibCheck": true,
     "strictNullChecks": true,
