--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,15 @@ GRPC_PORT=4001
 # CORS Configuration
 CORS_ORIGIN=http://localhost:3000,http://localhost:3001
 
+# S3 storage (Yandex Object Storage). Required.
+S3_BUCKET=
+S3_ACCESS_KEY_ID=
+S3_SECRET_ACCESS_KEY=
+# Optional; defaults: https://storage.yandexcloud.net, ru-central1
+# S3_ENDPOINT=https://storage.yandexcloud.net
+# S3_REGION=ru-central1
+# S3_PUBLIC_URL_BASE=  # optional; default: endpoint/bucket
+
 # PostgreSQL Database Configuration
 POSTGRES_HOST=localhost
 POSTGRES_PORT=5432
