--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "migration:show": "typeorm-ts-node-esm migration:show -d src/database/data-source.ts"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.998.0",
     "@grpc/grpc-js": "^1.10.9",
     "@grpc/proto-loader": "^0.7.13",
     "@grpc/reflection": "^1.0.1",
