Migrate to db DSN

--- a/.env.example
+++ b/.env.example
@@ -16,9 +16,6 @@ S3_SECRET_ACCESS_KEY=
 # S3_PUBLIC_URL_BASE=  # optional; default: endpoint/bucket
 
 # PostgreSQL Database Configuration
-POSTGRES_HOST=localhost
-POSTGRES_PORT=5432
-POSTGRES_USER=postgres
-POSTGRES_PASSWORD=postgres
-POSTGRES_DB=projects_db
+# Format: postgresql://user:password@host:5432/dbname
+DATABASE_URL=postgresql://postgres:postgres@localhost:5432/projects_db
 AUTO_MIGRATE=false
