--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -13,14 +13,12 @@ env:
   KUBE_NAMESPACE: projects
 
 jobs:
-  release:
+  version:
     runs-on: ubuntu-latest
-    timeout-minutes: 15
-    name: Build and release
-    permissions:
-      contents: write
-      packages: write
-
+    name: Generate version
+    timeout-minutes: 2
+    outputs:
+      version: ${{ steps.version.outputs.version }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -34,6 +32,15 @@ jobs:
           VERSION="1.0.${COMMIT_COUNT}"
           echo "version=${VERSION}" >> $GITHUB_OUTPUT
           echo "Release version: ${VERSION}"
+
+  build:
+    runs-on: ubuntu-latest
+    name: Build and push image
+    timeout-minutes: 15
+    needs: version
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -51,10 +58,19 @@ jobs:
           context: .
           push: true
           tags: |
-            ${{ vars.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ steps.version.outputs.version }}
+            ${{ vars.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ needs.version.outputs.version }}
             ${{ vars.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
           cache-from: type=registry,ref=${{ vars.REGISTRY }}/${{ env.IMAGE_NAME }}:buildcache
           cache-to: type=registry,ref=${{ vars.REGISTRY }}/${{ env.IMAGE_NAME }}:buildcache,mode=max
+
+  deploy:
+    runs-on: ubuntu-latest
+    name: Deploy to Kubernetes
+    timeout-minutes: 10
+    needs: [version, build]
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
 
       - name: Set up Helm
         uses: azure/setup-helm@v4
@@ -66,7 +82,7 @@ jobs:
 
       - name: Deploy with Helm
         env:
-          IMAGE_TAG: ${{ steps.version.outputs.version }}
+          IMAGE_TAG: ${{ needs.version.outputs.version }}
           IMAGE_PULL_SECRET: ${{ vars.IMAGE_PULL_SECRET }}
           PROJECTS_DATABASE_URL: ${{ secrets.PROJECTS_DATABASE_URL }}
           PROJECTS_S3_BUCKET: ${{ secrets.PROJECTS_S3_BUCKET }}
@@ -82,16 +98,24 @@ jobs:
             --wait \
             --timeout 5m
 
+  release:
+    runs-on: ubuntu-latest
+    name: Create GitHub Release
+    timeout-minutes: 2
+    needs: [version, deploy]
+    permissions:
+      contents: write
+    steps:
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v2
         with:
-          tag_name: v${{ steps.version.outputs.version }}
-          name: Release ${{ steps.version.outputs.version }}
+          tag_name: v${{ needs.version.outputs.version }}
+          name: Release ${{ needs.version.outputs.version }}
           body: |
-            ## Release ${{ steps.version.outputs.version }}
+            ## Release ${{ needs.version.outputs.version }}
 
             ### Docker Image
-            `${{ vars.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ steps.version.outputs.version }}`
+            `${{ vars.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ needs.version.outputs.version }}`
 
             ### Commit
             ${{ github.sha }}
