--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -7,120 +7,13 @@ on:
       - main
   workflow_dispatch:
 
-env:
-  IMAGE_NAME: projects
-  HELM_RELEASE: projects-staging
-  KUBE_NAMESPACE: projects
-
 jobs:
-  version:
-    runs-on: ubuntu-latest
-    name: Generate version
-    timeout-minutes: 2
-    outputs:
-      version: ${{ steps.version.outputs.version }}
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-
-      - name: Generate release number
-        id: version
-        run: |
-          COMMIT_COUNT=$(git rev-list --count HEAD)
-          VERSION="1.0.${COMMIT_COUNT}"
-          echo "version=${VERSION}" >> $GITHUB_OUTPUT
-          echo "Release version: ${VERSION}"
-
-  build:
-    runs-on: ubuntu-latest
-    name: Build and push image
-    timeout-minutes: 15
-    needs: version
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: Log in to Docker Registry
-        uses: docker/login-action@v3
-        with:
-          registry: ${{ vars.REGISTRY }}
-          username: ${{ secrets.DOCKER_REGISTRY_USERNAME }}
-          password: ${{ secrets.DOCKER_REGISTRY_TOKEN }}
-
-      - name: Build and push Docker image
-        uses: docker/build-push-action@v5
-        with:
-          context: .
-          push: true
-          tags: |
-            ${{ vars.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ needs.version.outputs.version }}
-            ${{ vars.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
-          cache-from: type=registry,ref=${{ vars.REGISTRY }}/${{ env.IMAGE_NAME }}:buildcache
-          cache-to: type=registry,ref=${{ vars.REGISTRY }}/${{ env.IMAGE_NAME }}:buildcache,mode=max
-
-  deploy:
-    runs-on: ubuntu-latest
-    name: Deploy to Kubernetes
-    timeout-minutes: 10
-    needs: [version, build]
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Set up Helm
-        uses: azure/setup-helm@v4
-
-      - name: Configure kubectl
-        run: |
-          echo "${{ secrets.KUBECONFIG }}" | base64 -d > /tmp/kubeconfig.yaml
-          echo "KUBECONFIG=/tmp/kubeconfig.yaml" >> $GITHUB_ENV
-
-      - name: Deploy with Helm
-        env:
-          IMAGE_TAG: ${{ needs.version.outputs.version }}
-          IMAGE_PULL_SECRET: ${{ vars.IMAGE_PULL_SECRET }}
-          PROJECTS_DATABASE_URL: ${{ secrets.PROJECTS_DATABASE_URL }}
-          PROJECTS_S3_BUCKET: ${{ secrets.PROJECTS_S3_BUCKET }}
-          PROJECTS_S3_ACCESS_KEY_ID: ${{ secrets.PROJECTS_S3_ACCESS_KEY_ID }}
-          PROJECTS_S3_SECRET_ACCESS_KEY: ${{ secrets.PROJECTS_S3_SECRET_ACCESS_KEY }}
-          PROJECTS_S3_ENDPOINT: ${{ vars.PROJECTS_S3_ENDPOINT }}
-          PROJECTS_S3_REGION: ${{ vars.PROJECTS_S3_REGION }}
-        run: |
-          envsubst < ./helm/ci-values.yaml | helm upgrade --install ${{ env.HELM_RELEASE }} ./helm \
-            --namespace ${{ env.KUBE_NAMESPACE }} \
-            --create-namespace \
-            -f - \
-            --wait \
-            --timeout 5m
-
   release:
-    runs-on: ubuntu-latest
-    name: Create GitHub Release
-    timeout-minutes: 2
-    needs: [version, deploy]
+    uses: onlyspans/gh-workflows/.github/workflows/release.yml@main
     permissions:
       contents: write
-    steps:
-      - name: Create GitHub Release
-        uses: softprops/action-gh-release@v2
-        with:
-          tag_name: v${{ needs.version.outputs.version }}
-          name: Release ${{ needs.version.outputs.version }}
-          body: |
-            ## Release ${{ needs.version.outputs.version }}
-
-            ### Docker Image
-            `${{ vars.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ needs.version.outputs.version }}`
-
-            ### Commit
-            ${{ github.sha }}
-
-            ### Triggered by
-            @${{ github.actor }}
-          draft: false
-          prerelease: false
+    with:
+      image_name: projects
+      helm_release: projects-staging
+      kube_namespace: projects
+    secrets: inherit
